# cpp-qt-wfh

./: CMakeLists.txt  README.md  ThreadPool.cpp  ThreadPool.h  main.cpp  utilities.cpp  utilities.h  window.cpp  window.h
runner/: my_runnable.cpp  my_runnable.h
widgets/: lint_check_widget.cpp  lint_check_widget.h  progress_widget.cpp  progress_widget.h
worker/: worker.cpp  worker.h
